--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "0.24.0",
+    "classnames": "2.3.1",
     "effector": "^22.1.2",
     "effector-react": "^22.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
